# shaderkit

./: .gitmodules  CMakeLists.txt  README.md
shaders/: fragment.frag  vertex.vert
src/: CMakeLists.txt  main.c
